--- a/fern/credentials/introduction.mdx
+++ b/fern/credentials/introduction.mdx
@@ -57,6 +57,7 @@ If you have your own password manager, Skyvern can integrate with it. Skyvern ca
 
 **Supported password manager types**:
 - Bitwarden
+- Custom Credential Service (HTTP API)
 - 1Password Integration (Private beta)
 
 **Coming Soon**:
@@ -87,6 +88,13 @@ Contact [Skyvern Support](mailto:support@skyvern.com) if you want access to the 
     href="mailto:sales@skyvern.com"
   >
     (coming soon) Securely manage your passwords with LastPass
+  </Card>
+  <Card
+    title="Custom Credential Service"
+    icon="api"
+    href="/credentials/custom-credential-service"
+  >
+    Integrate your own HTTP API for credential management
   </Card>
   <Card
     title="Keeper Integration"
