fix: address CodeRabbit nitpick comments for custom credential service
Backend improvements:
- Add custom exception class and proper exception chaining
- Fix import organization and move json import to top level
- Improve error handling with LOG.exception and defensive API validation
- Change ValueError to TypeError for type checking errors

Frontend improvements:
- Fix useEffect dependency array and add ESLint disable comment
- Add token masking length validation for short tokens
- Enhance error handling with specific 404 vs other error cases
- Make network error detection more robust across browsers

Documentation:
- Update Pydantic v1 .dict() method to v2 .model_dump() in examples

Addresses all 12 nitpick comments from CodeRabbit review for better code quality,
error handling, and user experience.

--- a/fern/credentials/custom-credential-service.mdx
+++ b/fern/credentials/custom-credential-service.mdx
@@ -143,7 +143,7 @@ async def create_credential(
     _: None = Depends(verify_token)
 ):
     credential_id = f"cred_{uuid.uuid4().hex[:12]}"
-    credentials_store[credential_id] = request.dict()
+    credentials_store[credential_id] = request.model_dump()
     return CredentialResponse(id=credential_id)
 
 @app.get("/api/v1/credentials/{credential_id}")
