1password integration is not in beta anymore (#3894)

--- a/fern/credentials/introduction.mdx
+++ b/fern/credentials/introduction.mdx
@@ -57,7 +57,7 @@ If you have your own password manager, Skyvern can integrate with it. Skyvern ca
 
 **Supported password manager types**:
 - Bitwarden
-- 1Password Integration (Private beta)
+- 1Password Integration
 
 **Coming Soon**:
 - LastPass Integration
@@ -79,7 +79,7 @@ Contact [Skyvern Support](mailto:support@skyvern.com) if you want access to the 
     icon="fingerprint"
     href="mailto:sales@skyvern.com"
   >
-    Securely manage your passwords with 1Password (Private beta)
+    Securely manage your passwords with 1Password
   </Card>
   <Card
     title="LastPass Integration"
