expanded proxy docs

--- a/fern/running-tasks/run-tasks.mdx
+++ b/fern/running-tasks/run-tasks.mdx
@@ -64,7 +64,12 @@ With this mapping, if Skyvern encounters a login failure, the task output will s
 
 Parameter: `proxy_location`
 
-Some websites block requests from certain countries. You can set a proxy location to route the browser traffic through.
+Some websites lock content behind geo-fences. Override this parameter to route the browser through a residential proxy in a specific country, state, or city.
+
+- Use enum values such as `RESIDENTIAL_GB`, `RESIDENTIAL_DE`, or `RESIDENTIAL_ISP` for country-level pools.
+- Send a GeoTarget object (e.g., `{"country": "US", "subdivision": "CA"}`) for granular U.S. states or cities.
+
+See [Proxy & Geo Targeting](/running-tasks/proxy-location) for the full list of options and sample API calls.
 
 ### 2FA Support (TOTP)
 - [totp_identifier](/api-reference/api-reference/agent/run-task#request.body.totp_identifier): Skyvern can receive the TOTP code and use this identifier to identify the code for authentication.
