--- a/fern/cloud/getting-started.mdx
+++ b/fern/cloud/getting-started.mdx
@@ -116,23 +116,23 @@ The extracted data appears at the top in JSON format. This matches the schema yo
 
 ### Overview
 
-**Overview** — View the browser screenshot, agent's thought process with decisions, and extraction results with detailed reasoning for each action taken
+View the browser screenshot, agent's thought process with decisions, and extraction results with detailed reasoning for each action taken
 
 ### Output
 
-**Output** — See the structured JSON output from the task, workflow run status information, and any downloaded files from the automation
+See the structured JSON output from the task, workflow run status information, and any downloaded files from the automation
 
 ### Parameters
 
-**Parameters** — Configure workflow settings including webhook callbacks, proxy location, HTTP headers, and the original task prompt used
+Configure workflow settings including webhook callbacks, proxy location, HTTP headers, and the original task prompt used
 
 ### Recording
 
-**Recording** — Watch a full video replay of the browser session showing exactly how the agent navigated and interacted with the website
+Watch a full video replay of the browser session showing exactly how the agent navigated and interacted with the website
 
 ### Code
 
-**Code** — Access the complete Python SDK code with workflow definitions, parameters, and extraction schemas to reproduce this task programmatically
+Access the complete Python SDK code with workflow definitions, parameters, and extraction schemas to reproduce this task programmatically
 
 ### AI Reasoning
 
@@ -142,31 +142,17 @@ The right sidebar shows the agent's thought process, actions taken, tools used a
 
 <CardGroup cols={2}>
   <Card
-    title="Build a Workflow"
+    title="Building a Workflow"
     icon="workflow"
-    href="/workflows/manage-workflows"
+    href="/cloud/building-workflows"
   >
-    Create reusable, multi-step automations with the visual workflow builder
+    See how you can make a reusable, multi-step workflow
   </Card>
   <Card
-    title="Store Credentials"
-    icon="key"
-    href="/credentials/introduction"
-  >
-    Securely save logins so Skyvern can authenticate without exposing passwords to the AI
-  </Card>
-  <Card
-    title="Workflow Blocks"
+    title="Handling Log-ins"
     icon="blocks"
-    href="/workflows/workflow-blocks-details"
+    href="/cloud/managing-credentials"
   >
-    Learn about Navigation, Extract, Login, and other block types available in workflows
-  </Card>
-  <Card
-    title="API Reference"
-    icon="code"
-    href="/api-reference/api-reference/tasks/run-task"
-  >
-    Trigger automations programmatically from your own code
+    See how you can set your Agent to login to websites while doing an automation
   </Card>
 </CardGroup>
