--- a/fern/getting-started/quickstart.mdx
+++ b/fern/getting-started/quickstart.mdx
@@ -194,12 +194,12 @@ This will open a browser window on your machine where Skyvern Agent will execute
     icon="key"
     href="/authentication"
   >
-    Learn how to store login credentials workflows that involve signing-up or logging-in or even 2FA
+    Learn how to store login credentials for workflows that involve signing-up or logging-in or even 2FA
   </Card>
   <Card
     title="Core Concepts"
     icon="book"
-    href="/core-concepts"
+    href="/getting-started/core-concepts"
   >
     Understand terms and concepts like Artifacts, Workflows and Tasks for agentic browser usage
   </Card>
