--- a/fern/getting-started/quickstart.mdx
+++ b/fern/getting-started/quickstart.mdx
@@ -105,7 +105,7 @@ The response includes a `run_id` you'll use to check status and fetch results.
 
 ## Step 4: Check the status
 
-Since tasks run asychronously, you have two options:
+Since tasks run asynchronously, you have two options:
 
 1. **Polling** — Periodically check the task status (shown below)
 2. **Webhooks** — Get notified when the task completes ([see webhooks guide](/running-tasks/webhooks-faq))
