GIFs for local, styling changes for cloud getting-started, and some images

--- a/fern/cloud/getting-started.mdx
+++ b/fern/cloud/getting-started.mdx
@@ -93,13 +93,9 @@ Once your task starts, you'll see the execution screen with two main panels:
 
 <img src="../images/cloud/live-browser-view.png" />
 
-**Left panel: Task configuration**
-
-Shows the block being executed with its URL and prompt. The status badge indicates whether the task is running, completed, or failed.
-
-**Right panel: Live Browser**
-
-A real-time view of the browser as Skyvern navigates. You'll see pages load, forms fill, and buttons click—exactly as if you were doing it yourself.
+| **Left: Task configuration** | **Center: Live Browser** | **Right: Agent Logs** |
+|---------|---------|-------------|
+| Shows the block being executed with its URL and prompt. The status badge indicates whether the task is running, completed, or failed. | A real-time view of the browser as Skyvern navigates. You'll see pages load, forms fill, and buttons click—exactly as if you were doing it yourself. | A real-time log of LLM's reasoning output and tool usage. Useful for troubleshooting complex workflows. |
 
 The **"take control"** button lets you intervene and use the agent's browser yourself if it needs help with something unexpected, like a CAPTCHA or unusual login flow.
 
