changed gif to video

--- a/fern/getting-started/quickstart.mdx
+++ b/fern/getting-started/quickstart.mdx
@@ -335,9 +335,9 @@ asyncio.run(main())
 
 A browser window will open on your machine (if you chose headful mode). Recordings and logs are saved in the directory where you started the server.
 
-<p align="center">
-  <img src="../images/skyvern-agent-local.gif" alt="Skyvern local agent opening a headful browser to perform as prompted" />
-</p>
+<video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
+  <source src="https://github.com/naman06dev/skyvern-docs/raw/8706c85d746e2a6870d81b6a95eaa511ad66dbf8/fern/images/skyvern-agent-local.mp4" type="video/mp4" />
+</video>
 
 ---
 
