Fix documentation issues
- core-concepts.mdx: Change "seven" to "eight" core concepts
- run-a-task.mdx: Mark url as optional (prompt is only required param)
- run-a-task.mdx: Fix "cancelled" to "canceled" (match codebase)
- task-parameters.mdx: Fix "cloud hosted" to "cloud-hosted"
- extract-structured-data.mdx: Fix Python regex to not corrupt strings
- extract-structured-data.mdx: Add duplicate field name detection/warning

--- a/docs/running-automations/run-a-task.mdx
+++ b/docs/running-automations/run-a-task.mdx
@@ -12,10 +12,10 @@ You describe what you want in natural language, and Skyvern's AI navigates the w
 
 ## Call `run_task`
 
-A task requires two parameters:
+A task has one required parameter and one commonly used optional parameter:
 
-- **`prompt`** — Natural language instructions describing what the AI should do
-- **`url`** — The starting page for the automation
+- **`prompt`** (required) — Natural language instructions describing what the AI should do
+- **`url`** (optional) — The starting page for the automation
 
 For additional parameters like engines, proxies, and extraction schemas, see [Task Parameters](/running-automations/task-parameters).
 
@@ -115,7 +115,7 @@ Use the `run_id` to fetch results once the task reaches a terminal state.
 | `failed` | Task encountered an error—check `failure_reason` and retry or adjust your prompt |
 | `terminated` | Task was manually stopped |
 | `timed_out` | Task exceeded time limit—increase `max_steps` or simplify the task |
-| `canceled` | Task was cancelled before starting |
+| `canceled` | Task was canceled before starting |
 
 You have three options for retrieving results:
 
