--- a/docs/getting-started/core-concepts.mdx
+++ b/docs/getting-started/core-concepts.mdx
@@ -4,7 +4,7 @@ subtitle: The building blocks of Skyvern automations
 slug: getting-started/core-concepts
 ---
 
-Skyvern has seven core concepts. Master these and you can build any browser automation.
+Skyvern has eight core concepts. Master these and you can build any browser automation.
 
 ---
 
