--- a/docs/running-automations/extract-structured-data.mdx
+++ b/docs/running-automations/extract-structured-data.mdx
@@ -32,6 +32,14 @@ export const SchemaBuilder = () => {
     setFields(fields.map((f) => (f.id === id ? { ...f, [key]: value } : f)))
   }
 
+  // Track duplicate field names
+  const duplicateNames = useMemo(() => {
+    const names = fields.map((f) => f.name).filter((n) => n.trim() !== "")
+    const counts = {}
+    names.forEach((n) => { counts[n] = (counts[n] || 0) + 1 })
+    return new Set(Object.keys(counts).filter((n) => counts[n] > 1))
+  }, [fields])
+
   const schema = useMemo(() => {
     const properties = {}
     fields.forEach((field) => {
@@ -60,7 +68,8 @@ export const SchemaBuilder = () => {
   const formattedOutput = useMemo(() => {
     const jsonStr = JSON.stringify(schema, null, 2)
     if (outputFormat === "python") {
-      return `data_extraction_schema=${jsonStr.replace(/null/g, "None").replace(/true/g, "True").replace(/false/g, "False")}`
+      // Only replace JSON literals at value positions (after ": "), not inside quoted strings
+      return `data_extraction_schema=${jsonStr.replace(/: null/g, ": None").replace(/: true/g, ": True").replace(/: false/g, ": False")}`
     }
     if (outputFormat === "typescript") {
       return `data_extraction_schema: ${jsonStr}`
@@ -118,7 +127,8 @@ export const SchemaBuilder = () => {
                 value={field.name}
                 onChange={(e) => updateField(field.id, "name", e.target.value)}
                 placeholder="Field name"
-                className="w-32 p-2 border rounded-md text-sm"
+                className={`w-32 p-2 border rounded-md text-sm ${duplicateNames.has(field.name) ? "border-red-500 bg-red-50" : ""}`}
+                title={duplicateNames.has(field.name) ? "Duplicate field name - will be overwritten in schema" : ""}
               />
               <select
                 value={field.type}
@@ -149,6 +159,11 @@ export const SchemaBuilder = () => {
         <button onClick={addField} className="w-full mt-2 p-2 border border-dashed rounded-md text-gray-500 text-sm hover:bg-gray-50">
           + Add field
         </button>
+        {duplicateNames.size > 0 && (
+          <div className="mt-2 p-2 bg-red-50 border border-red-200 rounded-md text-red-700 text-xs">
+            Duplicate field names detected. Only the last field with each name will appear in the schema.
+          </div>
+        )}
       </div>
 
       <div>
