--- a/docs/cloud/getting-started.mdx
+++ b/docs/cloud/getting-started.mdx
@@ -9,7 +9,7 @@ Run browser automations without writing code. This guide walks you through runni
 Prefer to integrate via code? Check out the [SDK Quickstart](/getting-started/quickstart) instead.
 </Note>
 
-## Opening Skyvern Cloud
+## Open Skyvern Cloud
 
 Visit [app.skyvern.com](https://app.skyvern.com) and sign-up or sign-in to your account.
 
@@ -17,7 +17,7 @@ You'll land on the **Discover** page—your starting point for running automatio
 
 <img src="/images/discover-page.png" alt="discover page in skyvern"/>
 
-## Understanding the Interface
+## Understand the Interface
 
 The left sidebar organizes everything you need:
 
